force-app/main/default/objects/Apttus_Config2__ClassificationName__c/Apttus_Config2__ClassificationName__c.object-meta.xml
<CustomObject>
    <description>Represents a category</description>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>