force-app/main/default/objects/Apttus_Config2__ClassificationName__c/fields/Apttus_Config2__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the category is active. Inactive categories are ignored.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>