force-app/main/default/objects/Apttus_Config2__ClassificationName__c/fields/Apttus_Config2__GuidePage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GuidePage__c</fullName>
    <description>The name of the guide page to use for Help Me Choose</description>
    <label>Guide Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>